# cks

./: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  cks.conf.in  cks.spec  cks.sql  cks.sql.in  configure.ac  configure.in
dns/: Makefile.am  cks-dns  gpgkeys_jkp
doc/: Makefile.am  cks_admin_manual.xml  cks_devl_manual.xml  cks_user_manual.xml  design.html  syncing.html
html/: Makefile.am  index.cgi
html/de/: about.html  add.html  advsearch.html  help.html  index.html
html/de/admin/: delete.html  index.html
html/en/: about.html  add.html  advsrch.html  help.html  index.html
html/en/admin/: .htaccess  .htpasswd  delete.html  index.html
src/: Makefile.am  add.c  add.h  bithelp.h  cgi.c  cgi.h  cks_cache.c  cks_cache.h  cks_config.c  cks_config.h  cks_constants.h  cks_debug.c  cks_debug.h  cks_error.c  cks_error.h  cks_export.c  cks_export.h  cks_import.c  cks_import.h  cks_keyimg.c  cks_keyimg.h  cks_ldap.c  cks_ldap.h  cks_log.c  cks_log.h  cks_mail_sync.c  cks_mail_sync.h  cks_parse_v3.c  cks_parse_v3.h  cks_parse_v4.c  cks_parse_v4.h  cks_reconcile.c  cks_reconcile.h  cks_socket.c  cks_socket.h  cks_sync.c  cks_sync.h  cks_xml.c  cks_xml.h  cksd.c  (+31 more)
